# PDFWhatsappSender

./: pyproject.toml
app/: .env  app.html  app.py  style.css
